--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "2.2.3",
     "@angular/platform-browser-dynamic": "2.2.3",
     "@angular/router": "3.2.3",
+    "bootstrap": "4.0.0-alpha.5",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
